--- a/package.json
+++ b/package.json
@@ -17,32 +17,36 @@
     "@radix-ui/react-alert-dialog": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@tanstack/react-table": "^8.9.2",
+    "@types/jsonwebtoken": "^9.0.4",
     "@types/oracledb": "^5.3.0",
     "@types/react-csv": "^1.1.3",
     "@types/recharts": "^1.8.24",
     "@types/xlsx": "^0.0.36",
     "activedirectory": "^0.7.2",
     "axios": "^1.4.0",
-    "class-variance-authority": "^0.4.0",
-    "clsx": "^1.2.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "cookies-next": "^2.1.2",
     "dotenv": "^16.3.1",
-    "lucide-react": "0.105.0-alpha.4",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.288.0",
     "next": "^13.4.4",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.2.1",
     "oracledb": "^6.0.1",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
